--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,17 +1,14 @@
-body {
-  font-family: Arial, sans-serif;
+@import url(https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap);
+* {
+  margin: 0;
+  padding: 0;
+  list-style: none;
 }
 
-.extension-button {
-  background-color: #4CAF50;
-  color: white;
-  border: none;
-  padding: 10px 20px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  margin: 4px 2px;
-  cursor: pointer;
-  border-radius: 4px;
+body {
+  font-family: "Inter", sans-serif;
+  font-weight: 300;
+  height: 600px;
+  width: 400px;
+  padding: 0 1rem;
 }
