--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,4 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
+@import 'variables/variables.scss';
+@import 'mixins/mixins.scss';
+
+* {
+    @include reset-list;
+}
+
 body {
-    font-family: Arial, sans-serif;
-    background-color: #f0f0f0;
+    font-family: $font-family;
+    font-weight: 300;
+    height: 600px;
+    width: 400px;
+    padding: 0 1rem;
 }
